group 'org.freerails'
version '0.4.1'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.9

repositories {
    mavenCentral()
}

sourceSets {
    tools
}

dependencies {
    compile 'log4j:log4j:1.2.17'
    testCompile 'junit:junit:4.12'
    toolsCompile sourceSets.main.output, sourceSets.test.output
}

mainClassName = 'freerails.client.launcher.LauncherFrame'

test {
    testLogging {
        events "failed"
        exceptionFormat "full"
    }
}

jar {
    manifest {
        attributes(
                 'Main-Class': mainClassName
        )
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}